--- a/main.html
+++ b/main.html
@@ -10,22 +10,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h1>My playlist</h1>
+	<h1>My Playlist</h1>
 	<div class="player_one">
-		<a href=" https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">Song1</a><br>
-		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song2</a><br>
-		<a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y " target="_blank">Song3</a><br>
-		<a href="https://www.youtube.com/watch?v=puKD3nkB1h4 " target="_blank">Song4</a><br>
-		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song5</a><br>
+		<ul>
+		<li><a href=" https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">Song1</a><br></li>
+		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song2</a><br></li>
+		<li><a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y " target="_blank">Song3</a><br></li>
+		<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 " target="_blank">Song4</a><br></li>
+		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song5</a><br></li>
 	</div>
 	<h3>Now playing....</h3>
 	<div class="player_two">
 		<video controls >
-			<source src="https://www.w3schools.com/tags/movie.mp4" >
+			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
 		</video>
 		<h2>MP3 songs</h2>
+		<p>Maan Meri Jann</p>
 		<audio controls>
-			<source src="https://www.pagalworld.com.se/files/download/id/64630">
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
 		</audio>
 	</div>
 </body>
