--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 " target="_blank">Song4</a><br></li>
 		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song5</a><br></li>
 	</div>
-	<h3>Now playing....</h3>
+	<h2>Now playing...</h2>
 	<div class="player_two">
 		<video controls >
 			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
